--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,7 +9,7 @@
   <title>{{ title }}</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;700;800;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css">
   <script src="https://use.fontawesome.com/a977c2ee2c.js"></script>
   <link rel="stylesheet" href="/assets/css/libraries.css">
@@ -57,18 +57,15 @@
       </div>
       <nav class="navbar navbar-expand-lg sticky-navbar">
         <div class="container">
-          <button type="button" class="action__btn action__btn-burgerMenu mr-30 d-none d-lg-block">
-            <i class="icon-nav"></i>
-          </button>
           <a class="navbar-brand" href="/">
-            <img src="/assets/images/logo/CF logo light.svg" class="logo-light logo" alt="logo">
-            <img src="/assets/images/logo/CF logo dark.svg" class="logo-dark logo" alt="logo">
+            <img src="/assets/images/logo/panacea-logo-dark.svg" class="logo-light logo" alt="logo">
+            <img src="/assets/images/logo/panacea-logo-dark.svg" class="logo-dark logo" alt="logo">
           </a>
           <button class="navbar-toggler" type="button">
             <span class="menu-lines"><span></span></span>
           </button>
           <div class="collapse navbar-collapse" id="mainNavigation">
-            <ul class="navbar-nav mr-auto ml-auto">
+            <ul class="navbar-nav ml-auto">
               <li class="nav__item">
                 <a href="/" class="nav__item-link">Home</a>
               </li><!-- /.nav-item -->
@@ -103,14 +100,10 @@
                 </li>
               </ul>
             </div>
+            <button type="button" class="action__btn action__btn-burgerMenu ml-30 d-none d-lg-block">
+              <div></div><div></div><div></div>
+            </button>
           </div><!-- /.navbar-collapse -->
-          <ul class="navbar-actions list-unstyled mb-0 d-flex align-items-center">
-            
-            <li class="d-none d-xl-block">
-              <a href="#contact-form" class="btn btn__primary btn__primary-style2 btn_ action__btn-contact">Request
-                A Quote</a>
-            </li>
-          </ul><!-- /.navbar-actions -->
         </div><!-- /.container -->
       </nav><!-- /.navabr -->
     </header><!-- /.Header -->
