--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -101,7 +101,7 @@
               </ul>
             </div>
             <button type="button" class="action__btn action__btn-burgerMenu ml-30 d-none d-lg-block">
-              <div></div><div></div><div></div>
+              <a href=""><span>i</span></a>
             </button>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
@@ -252,7 +252,7 @@
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-4 footer-widget footer-widget-about">
               <div class="footer-widget__content">
-                <img src="/assets/images/logo/CF logo light.svg" alt="logo" class="mb-30">
+                <img src="/assets/images/logo/panacea-logo-light.svg" alt="logo" class="mb-30 logo">
                 <p class="color-gray mb-40">We are experienced professionals who understand that It services is
                   changing, and are
                   true partners who care about your future business success.</p>
@@ -336,8 +336,8 @@
       <div class="burger-menu__content">
         <button type="button" class="burger-menu__close"><i class="fas fa-times"></i></button>
         <div class="burger-menu__header">
-          <img src="/assets/images/logo/CF logo light.svg" alt="logo" class="mb-30">
-          <p class="color-white">We are experienced professionals who understand that It services is changing, and are
+          <img src="/assets/images/logo/panacea-logo-dark.svg" alt="logo" class="mb-30 logo">
+          <p class="color-secondary">We are experienced professionals who understand that It services is changing, and are
             true partners who care about your future business success.</p>
         </div><!-- /.burger-menu__header -->
         <div class="contact-blocks-wrapper">
