--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="description" content="Certifications Master">
+  <meta name="description" content="Panacea IT Advisory">
   <title>{{ title }}</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -160,7 +160,7 @@
                   <div class="d-flex flex-wrap">
                     <p class="text-white">In a hurry? Let's chat!</p>
                     <a href="industries.html" class="btn btn__white btn__bordered btn__icon">
-                      <span>Contact us on Whatsapp</span><span style="font-size: 1.4em; margin-left: 8px;"><i class="fa fa-whatsapp" aria-hidden="true"></i></span>
+                      <span style="white-space:nowrap;">Connect on Whatsapp</span><span style="font-size: 1.4em; margin-left: 4px;"><i class="fa fa-whatsapp" aria-hidden="true"></i></span>
                     </a>
                   </div>
                 </div><!-- /.contact-panel__banner -->
@@ -221,7 +221,6 @@
       Footer
     ========================== -->
     <footer class="footer bg-heading">
-      <div class="bg-img"><img src="/assets/images/backgrounds/footer-bg.svg" alt="backgrounds"></div>
       <div class="footer-contact pt-50 pb-50">
         <div class="container">
           <div class="row">
@@ -324,9 +323,9 @@
             <div class="col-sm-6 col-md-6 col-lg-2 footer-widget footer-widget-nav">
               <h6 class="footer-widget__title">We're Hiring</h6>
               <div class="footer-widget__content">
-                <p class="fz-14 color-white">Interested in joining the Certifications Master team?</p>
-                <a href="careers.html" class="btn btn__primary btn__primary-style2 btn__link">
-                  <span>Our Careers</span><i class="icon-arrow-right icon-outlined"></i>
+                <p class="fz-14 color-white">Interested in joining the Panacea IT Advisory team?</p>
+                <a href="careers.html" class="btn btn__primary btn__link">
+                  <span class="text-white">Our Careers</span><i class="icon-arrow-right icon-outlined"></i>
                 </a>
               </div><!-- /.footer-widget__content -->
             </div><!-- /.col-lg-2 -->
@@ -337,7 +336,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 text-center">
-              <h6><span class="fz-14 font-weight-normal">&copy; 2020 Certifications Master, All Rights Reserved. Crafted with precision at</span>
+              <h6><span class="fz-14 font-weight-normal">&copy; 2020 Panacea IT Advisory, All Rights Reserved. Crafted with precision at</span>
               <a class="fz-14 color-primary text-lowercase" href="http://themeforest.net/user/gmail">madebysahej.com</a></h6>
             </div><!-- /.col-lg-12 -->
           </div><!-- /.row -->
@@ -363,8 +362,8 @@
           <div class="contact-block contact-block-light">
             <h5 class="contact-block__title">Quick Contact</h5>
             <ul class="contact-block__list list-unstyled">
-              <li><a href="mailto:Certifications Master@gmail.com"></a>Email: Certifications Master@gmail.com</li>
-              <li><a href="mailto:Certifications Master@gmail.com"></a>Support: Certifications Master@gmail.com</li>
+              <li><a href="mailto:Panacea IT Advisory@gmail.com"></a>Email: Panacea IT Advisory@gmail.com</li>
+              <li><a href="mailto:Panacea IT Advisory@gmail.com"></a>Support: Panacea IT Advisory@gmail.com</li>
             </ul>
           </div><!-- /.contact-panel__info__block -->
           <div class="contact-block contact-block-light">
