--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -86,10 +86,10 @@
                 <a href="/cert-cisa/" class="nav__item-link">Industries</a>
               </li><!-- /.nav-item -->
               <li class="nav__item  has-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Services</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">About Us</a>
                 <ul class="dropdown-menu">
                   <li class="nav__item">
-                    <a href="coming-soon.html" class="nav__item-link">Coming Soon</a>
+                    <a href="jobs/" class="nav__item-link">Jobs</a>
                   </li><!-- /.nav-item -->
                   <li class="nav__item">
                     <a href="404.html" class="nav__item-link">404 Page</a>
@@ -324,7 +324,7 @@
               <h6 class="footer-widget__title">We're Hiring</h6>
               <div class="footer-widget__content">
                 <p class="fz-14 color-white">Interested in joining the Panacea IT Advisory team?</p>
-                <a href="careers.html" class="btn btn__primary btn__link">
+                <a href="../jobs/" class="btn btn__primary btn__link">
                   <span class="text-white">Our Careers</span><i class="icon-arrow-right icon-outlined"></i>
                 </a>
               </div><!-- /.footer-widget__content -->
