--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1461,6 +1461,8 @@ h6 {
 }
 .apple-bg {
   background-position: bottom center;
+  min-height: 584px;
+  background-image: linear-gradient( #ffffff, #abecde);
   background-image: url('../images/home/hero.jpg'); 
   background-size: cover;
 }
