Recheck with preloader

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -31,12 +31,12 @@
 </head>
 
 <body>
-  <!-- <div class="wrapper"> 
+  <div class="wrapper"> 
     <div class="preloader">
       <div class="loading">
         <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
       </div>
-    </div> -->
+    </div>
     <!-- /.preloader -->
 
       <!-- =========================
