--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -31,12 +31,12 @@
 </head>
 
 <body>
-  <div class="wrapper"> 
+  <!-- <div class="wrapper"> 
     <div class="preloader">
       <div class="loading">
         <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
       </div>
-    </div>
+    </div> -->
     <!-- /.preloader -->
 
       <!-- =========================
@@ -84,24 +84,16 @@
                 <a href="/" class="nav__item-link">Home</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
-                <a href="/cert-cisa/" class="nav__item-link">Industries</a>
-              </li><!-- /.nav-item -->
-              <li class="nav__item  has-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">About Us</a>
-                <ul class="dropdown-menu">
-                  <li class="nav__item">
-                    <a href="jobs/" class="nav__item-link">Jobs</a>
-                  </li><!-- /.nav-item -->
-                  <li class="nav__item">
-                    <a href="404.html" class="nav__item-link">404 Page</a>
-                  </li><!-- /.nav-item -->
-                  <li class="nav__item">
-                    <a href="#" class="nav__item-link  open-register-popup">Register</a>
-                  </li><!-- /.nav-item -->
-                </ul><!-- /.dropdown-menu -->
+                <a href="/#/" class="nav__item-link">Services</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
-                <a href="../contact/" class="nav__item-link">Contact Us</a>
+                <a href="../about/" class="nav__item-link">About Us</a>
+              </li><!-- /.nav-item -->
+              <li class="nav__item">
+                <a href="../jobs/" class="nav__item-link">Careers</a>
+              </li><!-- /.nav-item -->
+              <li class="nav__item">
+                <a href="../contact/" class="nav__item-link">Contact</a>
               </li><!-- /.nav-item -->
             </ul><!-- /.navbar-nav -->
             <div class="d-md-block d-lg-none pl-20">
@@ -384,6 +376,7 @@
       </div><!-- /.burger-menu__content -->
     </div><!-- /.burger-menu -->
     <button id="scrollTopBtn"><i class="fas fa-long-arrow-alt-up"></i></button>
+    <a href="https://whatsapp.com" id="whatsappBtn" ><i class="fab fa-whatsapp"></i></a>
   </div><!-- /.wrapper -->
 
   <script src="/assets/js/jquery-3.5.1.min.js"></script>
